Fix carousel on mobile and desktop

--- a/src/index.css
+++ b/src/index.css
@@ -318,6 +318,14 @@ footer {
   display: none;
 }
 
+.galleryItem {
+  max-width: 100%;
+  height: 150px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     /* color: #213547; */
@@ -427,5 +435,10 @@ footer {
   }
   .copy-002 {
     display: none;
+  }
+
+  .galleryItem {
+    max-width: 100%;
+    height: 240px;
   }
 }
